# sequential-thinking-mcp-exploration

./: README.md  client.py  client2.py  example.md  pyproject.toml
mcp_sequential_thinking/: server.py
